manifests/deployment_celery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intellattract-celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: intellattract-celery-worker
  template:
    metadata:
      labels:
        app: intellattract-celery-worker
    spec:
      containers:
        - name: intellattract-celery-worker
          image: 968275953194.dkr.ecr.us-west-2.amazonaws.com/devops-intellattract-celery:new2
          command: ["/bin/sh"]
          args:
            - "-c"
            - |
              celery --app=__init__.celery_app worker -l info --uid=nobody --gid=nogroup
