manifests/deployment_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intellattract-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: intellattract-frontend
  template:
    metadata:
      labels:
        app: intellattract-frontend
    spec:
      containers:
        - name: intellattract-frontend
          image: 968275953194.dkr.ecr.us-west-2.amazonaws.com/devops-intellattract-gui:v5
          ports:
            - name: http
              containerPort: 80     

---

apiVersion: v1
kind: Service
metadata:
  name: intellattract-frontend
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: intellattract-frontend
