manifests/ingress_rancher.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.org/websocket-services: rancher
  name: rancher-ingress
spec:
  tls:
  - hosts:
    -  rancher-sandbox.intellattract.ai
    secretName: tls-rancher-ingress
  rules:
  - host:  rancher-sandbox.intellattract.ai
    http:
      paths:
      - backend:
          service:
            name: rancher
            port:
              number: 80
        path: /
        pathType: Prefix
